--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,40 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
 </head>
 
+
 <body class="container mt-5">
-    <div class="text-center">
-        <h1 class="mb-4">Audio Recorder</h1>
-        <button id="startRecord" class="btn btn-primary">Start Recording</button>
-        <button id="stopRecord"  class="btn btn-danger ms-2" disabled>Stop Recording</button>
-        <audio id="audioPlayer" class="mt-3" controls></audio>
-        <button id="postAudio" class="btn btn-success mt-3" disabled>Analisis Suara</button>
+    <div class="container text-center">
+        <h1 class="display-2 m-5">Emotion Analysis with ChatGPT</h1>
+
+        <div class="row justify-content-center">
+            <div class="col-md-6 text-center">
+                <audio id="audioPlayer" class="mb-3" controls></audio>
+            </div>
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col-md-6 text-center">
+                <button id="startRecord" class="btn btn-primary">Start Recording</button>
+                <button id="stopRecord" class="btn btn-danger" disabled>Stop Recording</button>
+                <button id="clearRecord" class="btn btn-warning" disabled>Clear Recording</button>
+                <button id="postAudio" class="btn btn-success" disabled>Analisis Suara</button>
+            </div>
+        </div>
+
+        <div class="row justify-content-center mt-3">
+            <div class="text-center" id="loading"> </div>
+        </div>
+
+        <div class="row justify-content-center mt-3">
+            <div class="text-center" id="transcriptionContainer"></div>
+        </div>
+
+        <div class="row justify-content-center mt-3">
+            <div class="text-center" id="responseContainer"></div>
+        </div>
+
     </div>
+
 
     <script>
         let mediaRecorder;
@@ -39,6 +65,7 @@
 
                 // Enable the post button once recording is stopped
                 document.getElementById('postAudio').disabled = false;
+                document.getElementById('clearRecord').disabled = false;
             };
 
             mediaRecorder.start();
@@ -50,14 +77,27 @@
             mediaRecorder.stop();
             document.getElementById('startRecord').disabled = false;
             document.getElementById('stopRecord').disabled = true;
+
+        };
+
+        const clearRecording = () => {
+            recordedChunks = [];
+            document.getElementById('audioPlayer').src = '';
+
+            document.getElementById('postAudio').disabled = true;
+            document.getElementById('clearRecord').disabled = true;
         };
 
         const postAudio = async () => {
             try {
-                // Send the recorded audio to the FastAPI backend
+                // Display "Loading..."
+                const loadingDiv = document.getElementById('loading');
+                loadingDiv.innerHTML = '<h1 class="display-4">Loading...</h1>';
+
+                // Membuat file audio dari chunks
                 const audioBlob = new Blob(recordedChunks, { type: 'audio/wav' });
 
-                // Create a FormData object with the correct enctype
+                // Membuat dan Post FormData
                 var formData = new FormData();
                 formData.append('file', audioBlob, 'recorded_audio.wav'); // Use 'file' as the key
 
@@ -66,20 +106,20 @@
                     body: formData,
                 });
 
+                // Hapus loading text
+                loadingDiv.innerHTML = '';
+
                 if (response.ok) {
                     const result = await response.json(); // Assuming the server returns JSON
 
-                    // Display transcription in the HTML
-                    const transcriptionDiv = document.createElement('div');
-                    transcriptionDiv.innerHTML = `<h1 class="display-4">Transcribed Text</h1><p class="fs-5">${result.transcription}</p>`;
+                    // Display transcription
+                    const transcriptionContainer = document.getElementById('transcriptionContainer');
+                    transcriptionContainer.innerHTML = `<h1 class="display-4">Transcribed Text</h1><p class="fs-5">${result.transcription}</p>`;
 
-                    // Display transcription in the HTML
-                    const responseDiv = document.createElement('div');
-                    responseDiv.innerHTML = `<h1 class="display-4">Analisis Emosi</h1><p class="fs-5">${result.response}</p>`;
+                    // Display response
+                    const responseContainer = document.getElementById('responseContainer');
+                    responseContainer.innerHTML = `<h1 class="display-4">Analisis Emosi</h1><p class="fs-5">${result.response}</p>`;
 
-                    // Append the transcription div to the body
-                    document.body.appendChild(transcriptionDiv);
-                    document.body.appendChild(responseDiv);
 
                 } else {
                     alert('Failed to post audio to the API');
@@ -87,11 +127,16 @@
             } catch (error) {
                 console.error('Error:', error);
             }
+
+            recordedChunks = [];
         };
 
+        // bind button dengan listener
         document.getElementById('startRecord').addEventListener('click', startRecording);
         document.getElementById('stopRecord').addEventListener('click', stopRecording);
+        document.getElementById('clearRecord').addEventListener('click', clearRecording);
         document.getElementById('postAudio').addEventListener('click', postAudio);
+
     </script>
 
 </body>
